# LChat_linux_servers

./: .gitignore  CMakeLists.txt  README.md
config/ChatServer/: config.ini.template
config/ChatServer2/: config.ini.template
config/GateServer/: config.ini.template
config/StatusServer/: config.ini.template
scripts/: build.sh  start_chat.sh  start_chat2.sh  start_gate.sh  start_status.sh
src/ChatServer/: CMakeLists.txt  CServer.cpp  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServiceImpl.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.h  UserMgr.cpp  const.h  data.h
src/ChatServer2/: CMakeLists.txt  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServiceImpl.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  Singleton.h  StatusGrpcClient.h  UserMgr.cpp  const.h
src/GateServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  const.h
src/StatusServer/: AsioIOServicePool.cpp  CMakeLists.txt  ChatGrpcClient.h  MysqlDao.cpp  MysqlDao.h  RedisMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp  const.h
src/VerifyServer/: config.json.template  email.js  server.js
